--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
-    <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PLd1RuosB2D_AreTje6fhjSHf9CWybIu77" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><div class="text">My Short Stories</div></center>
+    <center><iframe title="Uploaded Fairy Webfiction" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/0abc3420-0caf-470c-aa20-064f61bff682" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Uploaded Fairy Audiobook</div>
   </div>
   
