--- a/index.html
+++ b/index.html
@@ -126,24 +126,30 @@
   
   <div class="mySlides fade">
     <div class="numbertext">2 / 5</div>
+    <iframe width="100%" height="75%" scrolling="no" frameborder="no" src="https://funk.firobe.fr/embed.html?&amp;type=artist&amp;id=13220"></iframe>
+    <div class="text">Uploaded Fairy OSTk</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 5</div>
     <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PL7snxnQ2F7F4CJQn-xGxd4OKj08CaDrv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy OST</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">3 / 5</div>
+    <div class="numbertext">4 / 5</div>
     <center><iframe title="Ahusacos Quintet" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/4f69a18b-58d7-46de-8203-b972742675c3" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Ahusacos Quintet</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">4 / 5</div>
+    <div class="numbertext">5 / 5</div>
     <iframe title="Full Scores" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/54a55905-a3b3-47fd-bde1-6626774a8435" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
     <div class="text">My Full Scores</div>
   </div>
     
   <div class="mySlides fade">
-    <div class="numbertext">5 / 5</div>
+    <div class="numbertext">6 / 5</div>
     <center><iframe title="Shorts" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ea80a65b-dddd-4b50-b9f2-e6211813a8e1" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">My Piano Practice Shorts</div>
   </div>
