--- a/index.html
+++ b/index.html
@@ -119,32 +119,38 @@
   <!-- Full-width images with number and caption text -->
   
   <div class="mySlides fade">
-    <div class="numbertext">1 / 5</div>
+    <div class="numbertext">1 / 6</div>
     <center><iframe title="Uploaded Fairy Webfiction" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/0abc3420-0caf-470c-aa20-064f61bff682" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Uploaded Fairy Audiobook</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">2 / 5</div>
+    <div class="numbertext">2 / 6</div>
     <center><iframe width="100%" height="75%" src="https://www.youtube.com/embed/videoseries?list=PL7snxnQ2F7F4CJQn-xGxd4OKj08CaDrv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></center>
     <div class="text">Uploaded Fairy OST</div>
   </div>
   
   <div class="mySlides fade">
-    <div class="numbertext">3 / 5</div>
+    <div class="numbertext">3 / 6</div>
     <center><iframe title="Ahusacos Quintet" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/4f69a18b-58d7-46de-8203-b972742675c3" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">Ahusacos Quintet</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">4 / 5</div>
+    <div class="numbertext">4 / 6</div>
     <iframe title="Full Scores" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/54a55905-a3b3-47fd-bde1-6626774a8435" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
     <div class="text">My Full Scores</div>
   </div>
     
   <div class="mySlides fade">
-    <div class="numbertext">5 / 5</div>
+    <div class="numbertext">5 / 6</div>
     <center><iframe title="Shorts" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/ea80a65b-dddd-4b50-b9f2-e6211813a8e1" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
+    <div class="text">My Piano Practice Shorts</div>
+  </div>
+  
+  <div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
+    <center><iframe title="PersonalEssays" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/3fe1187f-7b2b-4782-a129-e01c7a51ec30" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">My Piano Practice Shorts</div>
   </div>
     
