--- a/index.html
+++ b/index.html
@@ -180,9 +180,8 @@
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
 future when America speaks a new dialect that<br />blends Japanese and French.</p></center>
 
-<iframe scrolling="no" id="hearthis_at_user_318881-9292767" width="100%" height="350" src="https://hearthis.at/set/318881-9292767/embed/" frameborder="0" allowtransparency allow="autoplay"></iframe>
-
-<center><iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="640" height="240" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fcyberplace.social%2Fusers%2FLWFlouisa&theme=dark&size=100&header=true&replies=true&boosts=true"></iframe></center>
+<center<<iframe scrolling="no" id="hearthis_at_user_322166-9292767" width="640" height="240" src="https://hearthis.at/set/322166-9292767/embed/" frameborder="0" allowtransparency allow="autoplay"></iframe>
+<iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="640" height="240" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fcyberplace.social%2Fusers%2FLWFlouisa&theme=dark&size=100&header=true&replies=true&boosts=true"></iframe></center>
 
 <script>
 let slideIndex = 1;
