--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   
   <div class="mySlides fade">
     <div class="numbertext">7 / 7</div>
-    <center><iframe title="IMPUnit Podcast" width="560" height="315" src="https://video.ploud.jp/video-playlists/embed/f6e2d9d4-a53b-4afa-890e-c794d0e05b5a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
+    <center><iframe title="IMPUnit Podcast" width="100%" height="75%" src="https://video.ploud.jp/video-playlists/embed/f6e2d9d4-a53b-4afa-890e-c794d0e05b5a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></center>
     <div class="text">IMPUnit Podcasts</div>
   </div>
     
