--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
 
 <p>In a world where French-America and Japanese-America locked in civil war,<br />an apprentice executioner torn
 between love and justice. We explore<br />what led up to the civil unrest, to the aftermath eighty years<br />in the
-future when America speaks a new dialect that<br />blends Japanese and French.</p></center>
+future when America speaks a new dialect that<br />blends Japanese and French.</p>
+
+<p>Also I may have some unconvential theories some may call conspiracy theories, but a conspiracy theory is just a
+  buzzword for secrets the government doesn't want to be leaked.</p></center>
 
 <iframe scrolling="no" id="hearthis_at_user_322166-9292767" width="100%" height="350" src="https://hearthis.at/set/322166-9292767/embed/" frameborder="0" allowtransparency allow="autoplay"></iframe>
 
