--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ future when America speaks a new dialect that<br />blends Japanese and French.</
   buzzword for secrets the government doesn't want to be leaked.</p></center>
 
 <center><iframe src="https://api.radio4000.com/embed?slug=lwflouisa-radio" width="320" height="500" frameborder="0"></iframe></center>
+<center><iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="640" height="240" src="https://www.mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fcyberplace.social%2Fusers%2FLWFlouisa&theme=dark&size=100&header=true&replies=true&boosts=true"></iframe></center>
 
 <script>
 let slideIndex = 1;
